--- a/dot_config/zsh/dot_zshrc.d/common.zsh.tmpl
+++ b/dot_config/zsh/dot_zshrc.d/common.zsh.tmpl
@@ -18,6 +18,9 @@ export PATH="$GOPATH/bin:$PATH"
 export TENV_GITHUB_TOKEN=$(gh auth token)
 export TENV_AUTO_INSTALL=true
 
+# github
+export GITHUB_TOKEN=$(gh auth token)
+
 {{- if eq .device_role "workstation" }}
 export CZ_INTERACTIVE="true"
 {{- end }}
