chore: sync config

--- a/dot_docker/private_config.json.tmpl
+++ b/dot_docker/private_config.json.tmpl
@@ -7,7 +7,7 @@
 		"asia-southeast1-docker.pkg.dev": "gcloud"
 	},
 	{{- else -}}
-	"credHelpers": {},
+	"credHelpers": "desktop",
 	{{- end }}
 	"currentContext": "desktop-linux"
 }
