--- a/dot_config/zsh/dot_zsh_plugins.txt.tmpl
+++ b/dot_config/zsh/dot_zsh_plugins.txt.tmpl
@@ -3,82 +3,122 @@
 # .zsh_plugins.txt - antidote plugins file
 #
 # Notes:
-# - order of plugins sometimes matters
-# oh-my-zsh
-getantidote/use-omz
-# ref: https://github.com/mattmc3/ez-compinit?tab=readme-ov-file#what-if-im-using-oh-my-zsh
-# mattmc3/ez-compinit
+# - Plugin order matters for performance and functionality
+# - Inspired by mattmc3/zdotdir for optimal startup time
+# - Target: first_command_lag_ms < 200ms
+
+###
+### Core Framework & Theme
+###
+
+# Load theme first - powerlevel10k is fastest
 romkatv/powerlevel10k
 
-# oh-my-zsh libs
-# ohmyzsh/ohmyzsh path:lib
-ohmyzsh/ohmyzsh path:lib/async_prompt.zsh
-ohmyzsh/ohmyzsh path:lib/bzr.zsh
-ohmyzsh/ohmyzsh path:lib/cli.zsh
-ohmyzsh/ohmyzsh path:lib/clipboard.zsh
-ohmyzsh/ohmyzsh path:lib/compfix.zsh
-ohmyzsh/ohmyzsh path:lib/completion.zsh
-ohmyzsh/ohmyzsh path:lib/correction.zsh
-ohmyzsh/ohmyzsh path:lib/diagnostics.zsh
-ohmyzsh/ohmyzsh path:lib/directories.zsh
-ohmyzsh/ohmyzsh path:lib/functions.zsh
-ohmyzsh/ohmyzsh path:lib/git.zsh
-ohmyzsh/ohmyzsh path:lib/grep.zsh
-ohmyzsh/ohmyzsh path:lib/history.zsh
-# make the marlonrichert/zsh-autocomplete cannot use up/down arrow
-# ohmyzsh/ohmyzsh path:lib/key-bindings.zsh
-ohmyzsh/ohmyzsh path:lib/misc.zsh
-ohmyzsh/ohmyzsh path:lib/nvm.zsh
-ohmyzsh/ohmyzsh path:lib/prompt_info_functions.zsh
-ohmyzsh/ohmyzsh path:lib/spectrum.zsh
-ohmyzsh/ohmyzsh path:lib/termsupport.zsh
-ohmyzsh/ohmyzsh path:lib/theme-and-appearance.zsh
-ohmyzsh/ohmyzsh path:lib/vcs_info.zsh
+# Lightweight OMZ compatibility
+getantidote/use-omz
 
-# oh-my-zsh plugins
-ohmyzsh/ohmyzsh path:plugins/ansible
-ohmyzsh/ohmyzsh path:plugins/brew conditional:is-macos
-ohmyzsh/ohmyzsh path:plugins/chezmoi
-ohmyzsh/ohmyzsh path:plugins/colored-man-pages
+###
+### Environment & History
+###
+
+# Use zephyr instead of heavy OMZ libs - more modular and faster
+mattmc3/zephyr path:plugins/history
+mattmc3/zephyr path:plugins/environment
+mattmc3/zephyr path:plugins/homebrew conditional:is-macos
+
+###
+### Completions (load before compinit)
+###
+
+mattmc3/ez-compinit
+zsh-users/zsh-completions kind:fpath path:src
+
+###
+### Editor & Utilities
+###
+
+mattmc3/zephyr path:plugins/editor
+mattmc3/zephyr path:plugins/color
+mattmc3/zephyr path:plugins/directory
+mattmc3/zephyr path:plugins/utility
+
+###
+### Clipboard
+###
+
+ohmyzsh/ohmyzsh path:lib/clipboard.zsh
 ohmyzsh/ohmyzsh path:plugins/copybuffer
 ohmyzsh/ohmyzsh path:plugins/copyfile
 ohmyzsh/ohmyzsh path:plugins/copypath
+
+###
+### Essential OMZ Plugins
+###
+
 ohmyzsh/ohmyzsh path:plugins/extract
 ohmyzsh/ohmyzsh path:plugins/fancy-ctrl-z
-# ohmyzsh/ohmyzsh path:plugins/fzf
-# ohmyzsh/ohmyzsh path:plugins/globalias
-ohmyzsh/ohmyzsh path:plugins/gcloud
-ohmyzsh/ohmyzsh path:plugins/gh
 ohmyzsh/ohmyzsh path:plugins/git
-ohmyzsh/ohmyzsh path:plugins/golang
-ohmyzsh/ohmyzsh path:plugins/kubectl
-ohmyzsh/ohmyzsh path:plugins/macos conditional:is-macos
-# sometimes annoying for me
-# ohmyzsh/ohmyzsh path:plugins/magic-enter
-ohmyzsh/ohmyzsh path:plugins/otp
-{{ if has "laku6" .workspaces -}}
-ohmyzsh/ohmyzsh path:plugins/pyenv
-{{- end }}
-ohmyzsh/ohmyzsh path:plugins/python
-ohmyzsh/ohmyzsh path:plugins/thefuck
+ohmyzsh/ohmyzsh path:plugins/colored-man-pages
 ohmyzsh/ohmyzsh path:plugins/tmux
 ohmyzsh/ohmyzsh path:plugins/zoxide
 
-# oh-my-zsh external plugins
+###
+### Conditional Platform-Specific
+###
+
+ohmyzsh/ohmyzsh path:plugins/macos conditional:is-macos
+mattmc3/zephyr path:plugins/macos conditional:is-macos
+
+###
+### Heavy Plugins - Defer Loading
+###
+
+# Cloud & DevOps tools - defer for faster startup
+ohmyzsh/ohmyzsh path:plugins/ansible kind:defer
+ohmyzsh/ohmyzsh path:plugins/gcloud kind:defer
+ohmyzsh/ohmyzsh path:plugins/kubectl kind:defer
+ohmyzsh/ohmyzsh path:plugins/gh kind:defer
+
+# Language tools - defer
+ohmyzsh/ohmyzsh path:plugins/golang kind:defer
+{{ if has "laku6" .workspaces -}}
+ohmyzsh/ohmyzsh path:plugins/pyenv kind:defer
+{{- end }}
+ohmyzsh/ohmyzsh path:plugins/python kind:defer
+
+# Other heavy plugins
+ohmyzsh/ohmyzsh path:plugins/chezmoi kind:defer
+ohmyzsh/ohmyzsh path:plugins/otp kind:defer
+ohmyzsh/ohmyzsh path:plugins/thefuck kind:defer
+
+# NVM - lazy load with defer
+lukechilds/zsh-nvm kind:defer
+
+###
+### Interactive Tools
+###
+
+# fzf integration
 aloxaf/fzf-tab
-zsh-users/zsh-completions kind:fpath path:src
-belak/zsh-utils path:completion/functions kind:autoload post:compstyle_zshzoo_setup
-zsh-users/zsh-history-substring-search
-zsh-users/zsh-syntax-highlighting
-zdharma-continuum/fast-syntax-highlighting
-marlonrichert/zsh-autocomplete
-zsh-users/zsh-autosuggestions
-# make the marlonrichert/zsh-autocomplete cannot use up/down arrow
-# belak/zsh-utils path:editor
-belak/zsh-utils path:history
-zshzoo/macos conditional:is-macos
-belak/zsh-utils path:utility
+
+# Benchmarking
 romkatv/zsh-bench kind:path
-lukechilds/zsh-nvm
-# replaced with dot_config/zsh/dot_zshrc.d/atuin.zsh
-# atuinsh/atuin
+
+###
+### Final - Load Last for Proper Hooking
+###
+
+# History search - load before syntax highlighting
+zsh-users/zsh-history-substring-search
+
+# Syntax highlighting - ONLY ONE, load near end
+# Removed conflicting zsh-users/zsh-syntax-highlighting
+zdharma-continuum/fast-syntax-highlighting
+
+# Autosuggestions - after syntax highlighting
+zsh-users/zsh-autosuggestions
+
+# Autocomplete - LOAD LAST, can interfere with other plugins
+marlonrichert/zsh-autocomplete
+
+# vi: ft=zsh
