feat: more terminal feel performance squize

--- a/dot_config/zsh/dot_zsh_plugins.txt.tmpl
+++ b/dot_config/zsh/dot_zsh_plugins.txt.tmpl
@@ -88,8 +88,8 @@ ohmyzsh/ohmyzsh path:plugins/python kind:defer
 
 # Other heavy plugins
 ohmyzsh/ohmyzsh path:plugins/chezmoi kind:defer
-ohmyzsh/ohmyzsh path:plugins/otp kind:defer
-ohmyzsh/ohmyzsh path:plugins/thefuck kind:defer
+# ohmyzsh/ohmyzsh path:plugins/otp kind:defer
+# ohmyzsh/ohmyzsh path:plugins/thefuck kind:defer
 
 # NVM - lazy load with defer
 lukechilds/zsh-nvm kind:defer
