--- a/dot_config/zsh/dot_zsh_plugins.txt.tmpl
+++ b/dot_config/zsh/dot_zsh_plugins.txt.tmpl
@@ -41,6 +41,7 @@ mattmc3/zephyr path:plugins/editor
 mattmc3/zephyr path:plugins/color
 mattmc3/zephyr path:plugins/directory
 mattmc3/zephyr path:plugins/utility
+$ZDOTDIR/lib/zsh-no-ps2.zsh
 
 ###
 ### Clipboard
