--- a/dot_config/zsh/dot_zsh_plugins.txt.tmpl
+++ b/dot_config/zsh/dot_zsh_plugins.txt.tmpl
@@ -47,17 +47,17 @@ $ZDOTDIR/lib/zsh-no-ps2.zsh
 ### Clipboard
 ###
 
-ohmyzsh/ohmyzsh path:lib/clipboard.zsh
-ohmyzsh/ohmyzsh path:plugins/copybuffer
-ohmyzsh/ohmyzsh path:plugins/copyfile
-ohmyzsh/ohmyzsh path:plugins/copypath
+# ohmyzsh/ohmyzsh path:lib/clipboard.zsh
+# ohmyzsh/ohmyzsh path:plugins/copybuffer
+# ohmyzsh/ohmyzsh path:plugins/copyfile
+# ohmyzsh/ohmyzsh path:plugins/copypath
 
 ###
 ### Essential OMZ Plugins
 ###
 
-ohmyzsh/ohmyzsh path:plugins/extract
-ohmyzsh/ohmyzsh path:plugins/fancy-ctrl-z
+# ohmyzsh/ohmyzsh path:plugins/extract
+# ohmyzsh/ohmyzsh path:plugins/fancy-ctrl-z
 ohmyzsh/ohmyzsh path:plugins/git
 ohmyzsh/ohmyzsh path:plugins/colored-man-pages
 ohmyzsh/ohmyzsh path:plugins/tmux
@@ -99,7 +99,7 @@ lukechilds/zsh-nvm kind:defer
 ###
 
 # fzf integration
-aloxaf/fzf-tab
+# aloxaf/fzf-tab
 
 # Benchmarking
 romkatv/zsh-bench kind:path
@@ -112,7 +112,7 @@ romkatv/zsh-bench kind:path
 zsh-users/zsh-history-substring-search
 
 # Syntax highlighting - ONLY ONE, load near end
-# Removed conflicting zsh-users/zsh-syntax-highlighting
+# zsh-users/zsh-syntax-highlighting
 zdharma-continuum/fast-syntax-highlighting
 
 # Autosuggestions - after syntax highlighting
