fix: fix after try on fresh macos tahoe install

--- a/.chezmoiscripts/run_onchange_after_1-install-homebrew-packages.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_1-install-homebrew-packages.sh.tmpl
@@ -4,7 +4,7 @@ set -e
 
 {{ if eq .chezmoi.os "darwin" -}}
 echo "installing homebrew packages..."
-source ~/.zprofile
+eval "$(/opt/homebrew/bin/brew shellenv)"
 
 brew bundle --file=/dev/stdin <<EOF
 {{ range .packages.darwin.homebrew.taps -}}
