feat: sync docker config json after upgrade

--- a/dot_docker/dot_config.json.tmpl
+++ b/dot_docker/dot_config.json.tmpl
@@ -7,7 +7,7 @@
 		"asia-southeast1-docker.pkg.dev": "gcloud"
 	},
 	{{- else -}}
-	"credHelpers": "desktop",
+	"credsStore": "desktop",
 	{{- end }}
 	"currentContext": "desktop-linux"
 }
