fix: workaround - use sudo to not repeatly input password

--- a/.chezmoiscripts/run_onchange_after_3-install-mas-apps.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_3-install-mas-apps.sh.tmpl
@@ -12,7 +12,7 @@ export PATH="/opt/homebrew/bin:$PATH"
 {{ if has .name $.workspaces -}}
 {{ if .mas -}}
 {{ range .mas -}}
-mas install {{ .id }}
+sudo mas install {{ .id }}
 {{ end -}}
 {{ end -}}
 {{ end -}}
