feat: allow file overwriting with (>) clobber

--- a/dot_config/zsh/dot_zshrc.d/common.zsh.tmpl
+++ b/dot_config/zsh/dot_zshrc.d/common.zsh.tmpl
@@ -4,6 +4,9 @@ alias tf="terraform"
 alias kcc="kubectl config current-context"
 alias cz="chezmoi"
 
+# Allow file overwriting with > redirection
+setopt clobber
+
 # gpg
 export GPG_TTY=$(tty)
 
