feat: init new workspace

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -3,7 +3,7 @@ encryption = "age"
 {{- $computerName := (output "hostname" | trim) -}}
 {{- $ageIdentityPath := (joinPath (.chezmoi.destDir | toString) ".config/chezmoi/key.txt") -}}
 {{- $ageRecipient := "age1lgmay2ca3aydsltkxjhz2qc6ep4rqdpjneye3lxra0h3a5k37aeqjj2ue4,age17nqlfm7qj72hgjfs82vqwcfatqymqngpwvp7v999crs2t5a6tu5sd0vcp9" -}}
-{{- $workspaceChoices := list "kholisrag" "laku6" -}}
+{{- $workspaceChoices := list "kholisrag" "laku6" "kloia" -}}
 {{- $workspaces := list "" -}}
 {{- $deviceRoleChoices := list "workstation" "server" -}}
 {{- $deviceRole := "" -}}
