fix: fix clossing if block

--- a/dot_config/zsh/dot_zshrc.d/common.zsh.tmpl
+++ b/dot_config/zsh/dot_zshrc.d/common.zsh.tmpl
@@ -75,6 +75,8 @@ export GOPRIVATE={{ $item.config.golang_goprivate | quote }}
 {{- end }}
 {{- end }}
 
+{{ end -}}
+
 {{ if has "kloia" .workspaces -}}
 {{- range $item := $config.config }}
 {{- if eq $item.name "kloia" }}
