feat: update config

--- a/dot_config/zsh/dot_zsh_plugins.txt.tmpl
+++ b/dot_config/zsh/dot_zsh_plugins.txt.tmpl
@@ -64,7 +64,7 @@ $ZDOTDIR/lib/zsh-no-ps2.zsh
 ohmyzsh/ohmyzsh path:plugins/git kind:defer
 ohmyzsh/ohmyzsh path:plugins/colored-man-pages kind:defer
 ohmyzsh/ohmyzsh path:plugins/tmux kind:defer
-ohmyzsh/ohmyzsh path:plugins/direnv kind:defer
+ohmyzsh/ohmyzsh path:plugins/direnv
 ohmyzsh/ohmyzsh path:plugins/zoxide kind:defer
 
 ###
